<resources>
    <string name="app_name">VisitSA</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="homepageavatar">HomePageAvatar</string>
    <string name="login">Login</string>
    <string name="new_to_the_app">New to the app?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="restaurants_cafees">Restaurants/Cafees</string>
    <string name="attractions">Attractions</string>
    <string name="museums">Museums</string>
    <string name="nightlife">NightLife</string>
    <string name="tours">Tours</string>
    <string name="welcome">Welcome</string>
    <string name="we_have_prepared_many_interesting_choices_for_you_as_usual">We have prepared many interesting choices for you as usual!</string>
    <string name="restaurant_img">restaurant_img</string>
    <string name="add_user_button">Add user button</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="logout">logout</string>
    <string name="enjoy_the_nightlife_in_sarajevo_with_these_exceptional_places_we_have_prepared_for_you">Enjoy the nightlife in Sarajevo with these exceptional places we have prepared for you.</string>
    <string name="cinemas_sloga">Cinemas Sloga</string>
    <string name="mehmeda_spahe_20_sarajevo_71000">Mehmeda Spahe 20, Sarajevo 71000</string>
    <string name="popular_night_spot_in_the_city_where_entertainment_awaits_latin_nights_are_held_each_monday_and_the_club_s_stage_is_occupied_by_regional_and_local_music_stars">Popular night spot in the city where entertainment awaits. Latin nights are held each Monday, and the club\'s stage is occupied by regional and local music stars.</string>
    <string name="phone_sloga">+387 33 218 811</string>
    <string name="hours_sloga">Monday-Sunday: 6PM - 5AM</string>
    <string name="das_ist_walter_club">Das ist Walter Club</string>
    <string name="valtera_peri_a_16_sarajevo_71000">Valtera Perića 16, Sarajevo 71000</string>
    <string name="hours_walter">Friday-Sunday: 8PM - 6AM</string>
    <string name="phone_walter">+387 33 831 872</string>
    <string name="one_of_the_most_famous_clubs_in_sarajevo_will_make_you_enjoy_the_stunning_atmosphere_with_more_than_100_varieties_of_wine_and_20_types_of_beer_walter_will_make_everyone_sattisfied">One of the most famous clubs in Sarajevo will make you enjoy the stunning atmosphere. With more than 100 varieties of wine and 20 types of beer, Walter will make everyone sattisfied.</string>
    <string name="location_dorian">Maršala Tita 7, Sarajevo 71000</string>
    <string name="descripton_dorian">Dorian Gray is a new club that promotes a positive atmosphere. If you\'re looking for warm and delicious food, or a dancing floor, you\'ve come to the right place.</string>
    <string name="dorian_gray">Dorian Gray</string>
    <string name="phone_dorian">+387 60 301 9721</string>
    <string name="bjela_nica">Bjelašnica</string>
    <string name="bjela_nica_sarajevo_71000">Bjelašnica, Sarajevo 71000</string>
    <string name="bjelasnica_hours">+387 33 579 006</string>
    <string name="monday_sunday_00_24h">Monday–Sunday: 00 – 24h</string>
    <string name="bjelasnica">The beauty of mountain Bjelašnica, which is only 35km from the center of Sarajevo, can be enjoyed throughout the year. This Olympic beauty must be visited!</string>
    <string name="igman">Igman</string>
    <string name="text_igman">Another Olympic mountain, Igman lies 24km to the southwest of Sarajevo, and there are several settlements which you can take. Perfect for summer and winter activities, Igman has it all.</string>
    <string name="phone_igman">+387 33 789 030</string>
    <string name="location_igman">Igman, Sarajevo 71000</string>
    <string name="vije_nica">Vijećnica</string>
    <string name="obala_kulina_bana_sarajevo_71000">Obala Kulina bana, Sarajevo 71000</string>
    <string name="_387_33_443_152">+387 33 443 152</string>
    <string name="monday_sunday_9am_5pm">Monday-Sunday: 9AM - 5PM</string>
    <string name="vije_nica_is_the_most_extravagant_building_constructed_in_sarajevo_during_the_austro_hungarian_occupation_and_serves_as_a_symbol_of_the_meeting_of_world_civilizations">Vijećnica is the most extravagant building constructed in Sarajevo during the Austro-Hungarian occupation and serves as a symbol of the meeting of world civilizations.</string>
    <string name="attractions_message">Enjoy the attractions that Sarajevo has to offer</string>
    <string name="nightlifee">Nightlife</string>
    <string name="national_location">Zmaja od Bosne 3</string>
    <string name="national_phone">+387 33 668 027</string>
    <string name="national_hours">Tuesday - Sunday: 10AM - 7PM</string>
    <string name="national_description">The largest and most significant museum institution in Bosnia and Herzegovina is the National Museum, emerged from the initial Museum Association of BiH. In 1888, it was awarded a status of a national institution.</string>
    <string name="olympic_location"> Petrakijina 7, Sarajevo 71000</string>
    <string name="olympic_number"> +387 33 226 414</string>
    <string name="olympic_hours"> Tuesday-Sunday: 10AM - 6PM</string>
    <string name="olympic_description"> The Olympic Museum\'s permanent exhibit preserves the memory of the preparation and organization that was involved in realizing the XIV Winter Olympic Games in Sarajevo.</string>
    <string name="literature_location"> Sime Milutinovića Sarajlije 7, Sarajevo 71000</string>
    <string name="literature_number">+387 33 201 861</string>
    <string name="literature_hours"> Monday - Friday: 8AM - 7PM</string>
    <string name="literature_description"> Permanent Exhibit features the Study Room of Silvije Strahimir Kranjčević and parts of Study Rooms of Hasan Kikić, Petar Kočić and Isak Samokovlija, all well known BiH writers.</string>
    <string name="national">The National Musem</string>
    <string name="olympic">The Olympic Musem</string>
    <string name="literature">Museum Of Literature</string>
    <string name="museumdesc">Enjoy the various Museums Sarajevo has to offer with these exceptional places we have prepared for you.</string>
    <string name="restaurants">Restaurants and Cafees</string>
    <string name="restaurant_desc">We listed the best places in Sarajevo to eat and drink only for you</string>
    <string name="location_avlija">Avde Sumbula 2, Sarajevo 71000</string>
    <string name="phone_avlija">+387 33 444 483</string>
    <string name="hours_avlija">Monday-Saturday: 8AM - 11PM</string>
    <string name="description_avlija">History, tradition and quality all in one place - this is the best description for this unique restaurant and cafee. The wide selection of both traditional Bosnian and international dishes are sure to please the most enthusiastic gourmets.</string>
    <string name="avlija">Avlija</string>
    <string name="mrkva">Ćevabdžinica Mrkva</string>
    <string name="location_mrkva">Bravadžiluk 13, Sarajevo 71000</string>
    <string name="phone_mrkva">+387 33 532 519</string>
    <string name="hours_mrkva">Monday-Sunday: 8:30AM - 10PM</string>
    <string name="description_mrkva">Having a tradition of more than 50 years speaks volumes about the quality of Mrkva Ćevabdžinica, which first opened in Baščaršija in 1963. The ćevapčići are still made according to a family recipe and there are also other delicious grilled specialties available.</string>
    <string name="dibek">Dibek</string>
    <string name="location_dibek">Luledžina 3, Sarajevo 71000</string>
    <string name="phone_dibek">+387 61 275 274</string>
    <string name="dibek_hours">Monday-Sunday: 10AM - 2AM</string>
    <string name="description_dibek">If you’re visiting Baščaršija and you’d like to take a break and enjoy a nice time with friends over hookah and some refreshing drinks - Dibek is the place for you.</string>
    <string name="tours_message">Check these exquisite tours that we have prepared for you</string>
    <string name="tour1">Meeting of Cultures Tour</string>
    <string name="tour1_location">Meeting at : Sebilj, Sarajevo</string>
    <string name="tour1_hours">11AM - 2PM</string>
    <string name="tour1_price">25 BAM</string>
    <string name="tour_register">Register</string>
    <string name="about_us">About us</string>
    <string name="about_us_text">Project for Introduction to Mobile Programming at the Burch University.</string>
    <string name="tour1_description">Expolore Sarajevo as the meeting of cultures. Stops are: City Hall, Kazandžiluk, Morića Han, Gazi Husrev-beg Mosque, Latin Bridge, Gazi-Husrev Beg\'s Bezistan, Sarajevo Meeting of Culture, Serbian Orthodox Cathedral and Sacred Heart Cathedral.</string>
    <string name="change_your_e_mail">Change your E-mail:</string>
    <string name="change_e_mail">Change E-Mail</string>
    <string name="enter_new_e_mail_address">Enter New E-mail Address:</string>
    <string name="change_password">Change Password</string>
    <string name="create_new_password">Create New Password:</string>
    <string name="re_enter_new_password">Re-Enter New Password:</string>
    <string name="change_your_password">Change your password:</string>
</resources>