<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/tours"
            android:textColor="@color/eggplant_primary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tours_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/tours_message"
            android:textColor="@color/eggplant_primary"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:ignore="RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_bjelasnica"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tours_welcome">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_tour1"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:contentDescription="@string/restaurant_img"
                    android:src="@drawable/tours_meetingofcultures"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_tour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tour1"
                    android:paddingTop="3dp"
                    android:textColor="@color/eggplant_primary"
                    android:layout_marginStart="10dp"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/img_tour1"
                    app:layout_constraintTop_toBottomOf="@+id/img_tour1" />

                <TextView
                    android:id="@+id/location_tour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:text="@string/tour1_location"
                    android:textColor="@color/eggplant_primary"
                    app:layout_constraintStart_toStartOf="@+id/title_tour1"
                    app:layout_constraintTop_toBottomOf="@+id/title_tour1"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/hours_tour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:text="@string/tour1_hours"
                    android:textColor="@color/eggplant_primary"
                    app:layout_constraintStart_toStartOf="@+id/title_tour1"
                    app:layout_constraintTop_toBottomOf="@+id/location_tour1"
                    app:drawableStartCompat="@drawable/ic_baseline_hourglass_bottom_24" />

                <TextView
                    android:id="@+id/price_tour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:text="@string/tour1_price"
                    android:textColor="@color/eggplant_primary"
                    app:layout_constraintStart_toStartOf="@+id/hours_tour1"
                    app:layout_constraintTop_toBottomOf="@+id/hours_tour1"
                    app:drawableStartCompat="@drawable/ic_baseline_attach_money_24" />


                <TextView
                    android:id="@+id/description_tour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:text="@string/tour1_description"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/location_tour1"
                    app:layout_constraintTop_toBottomOf="@+id/price_tour1"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/button_tour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/tour_register"
                    app:layout_constraintStart_toStartOf="@+id/hours_tour1"
                    app:layout_constraintTop_toBottomOf="@+id/description_tour1"
                    tools:ignore="TextContrastCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>